--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,11 @@ branches:
   - cmake_support
 
 before_install:
-  - sudo apt-get install -y -qq ninja-build miktex
+  - sudo apt-get install -y -qq ninja-build
+  - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys D6BC243565B2087BC3F897C9277A7293F59E4889
+  - echo "deb http://miktex.org/download/ubuntu bionic universe" | sudo tee /etc/apt/sources.list.d/miktex.list
+  - sudo apt-get update -qq
+  - sudo apt-get install -y -qq miktex
 
 script:
   - ls
