--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,8 @@ branches:
 
 before_install:
   - sudo apt-get install -y -qq ninja-build
-  - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys D6BC243565B2087BC3F897C9277A7293F59E4889
-  - echo "deb http://miktex.org/download/ubuntu xenial universe" | sudo tee /etc/apt/sources.list.d/miktex.list
-  - sudo apt-get update -qq
-  - sudo apt-get install -y -qq miktex
+  - wget http://tug.ctan.org/tex-archive/systems/win32/miktex/setup/deb/pool/universe/m/miktex/miktex_2.9.6700-xenial1_amd64.deb
+  - sudo dpkg -i miktex_2.9.6700-xenial1_amd64.deb
 
 script:
   - ls
