--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,13 @@ branches:
 
 before_install:
   - sudo apt-get install -y -qq ninja-build
-  - wget http://tug.ctan.org/tex-archive/systems/win32/miktex/setup/deb/pool/universe/m/miktex/miktex_2.9.6700-xenial1_amd64.deb
-  - sudo dpkg -i miktex_2.9.6700-xenial1_amd64.deb
+  - git clone https://github.com/MiKTeX/miktex.git
+  - cd miktex
+  - mkdir build
+  - cd build
+  - cmake ..
+  - make
+  - make install
 
 script:
   - ls
